--- a/tex/diff.tex
+++ b/tex/diff.tex
@@ -4,7 +4,7 @@
   \SignRadius = 1.5;
   \SignBaseHeight = -1.5;
   \FileNameMargins = 2;
-  \CodeScale = 1.6;
+  \CodeScale = 1.4;
   \CodeMargins = 2;
   \SignOffset = 3;
 }
@@ -69,12 +69,12 @@
         \foreach \sign/\line [count=\i] in {#7} {\ifcsempty{sign}{}{
           % First line has special positionning.
             \ifnumcomp{\i}{=}{1}{
-              \node[anchor=north west,\sign] (line-1) {\tt \line};
+              \node[anchor=north west,\sign] (line-1) {\Code{\line}};
             }{
               \tikzmath{\prev = int(\i - 1);}
               \node[below=#4 of line-\prev.base west, \sign,
                 anchor=base west]
-                  (line-\i) {\tt \line};
+                  (line-\i) {\Code{\line}};
             }
         }}
 
@@ -89,7 +89,7 @@
     % Setup file name label.
       \node[above=\FileNameMargins+\CodeMargins of line-1.north west,
       scale=\FileNameScale, anchor=south west, #1]
-        (filename) {\tt #6};
+        (filename) {\Code{#6}};
     \coordinate (pad) at (\FileNameMargins-\eps, \FileNameMargins);
     \coordinate (lower) at ($(filename.south west) - (pad)$);
     \coordinate (upper) at ($(filename.north east) + (pad)$);
