'Progress' on every slide.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -107,9 +107,8 @@
 \renewcommand{\TitleText}{Introduction}
 \renewcommand{\SubTitleText}{Git and git clients}
 \renewcommand{\PageNumText}{1}
-\renewcommand{\Progress}{1/4}
 \newlength{\U}
-\Step{
+\Step{1/4}{
   \begin{scope}[inner sep=10]
     \setlength{\U}{75mm}
     \tikzmath{
@@ -159,8 +158,7 @@
 \renewcommand{\TitleText}{The Pizzas Repository}
 \renewcommand{\SubTitleText}{Crafting your first commits}
 \renewcommand{\PageNumText}{2}
-\renewcommand{\Progress}{2/4}
-\Step{
+\Step{2/4}{
 
   \FileTree[north west][files]{-1, 1}{
     folder/+/root/rootfolder,
@@ -180,8 +178,7 @@
 \renewcommand{\TitleText}{Collaborating}
 \renewcommand{\SubTitleText}{Working with a remote}
 \renewcommand{\PageNumText}{3}
-\renewcommand{\Progress}{3/4}
-\Step{
+\Step{3/4}{
 
   \FileTree[north west][myfiles]{-1, 1}{
     folder/+/root/rootfolder,
@@ -211,12 +208,11 @@
 \renewcommand{\TitleText}{Resolving Conflicts}
 \renewcommand{\SubTitleText}{What a ``conflict'' means}
 \renewcommand{\PageNumText}{4}
-\renewcommand{\Progress}{4/4}
 \tikzset{
   zone/.style={scale=\LargeScale, Dark4},
   zone code/.style={scale=2.3},
 }
-\Step{
+\Step{4/4}{
 
 \AutomaticCoordinates{low}{-.34, -.95}
 \AutomaticCoordinates{up}{+.34, +.95}
