--- a/tex/diff.tex
+++ b/tex/diff.tex
@@ -10,7 +10,7 @@
 }
 \colorlet{plus}{Green5}
 \colorlet{minus}{Red5}
-\colorlet{unchanged}{black}
+\colorlet{unchanged}{Dark4}
 \colorlet{modified}{Orange3}
 \colorlet{conflict}{Purple3}
 \tikzset{
