--- a/tex/step.tex
+++ b/tex/step.tex
@@ -114,7 +114,7 @@
 }
 
 % Automatic coordinates are interpreted as intensive to Canvas,
-% unless they contain no comma (node name) or are a calculation with '$'.
+% unless they contain no comma (node name) or are a calculation with '$' or '|'.
 % If they contain '=', they are interpreted as relative specifications
 % like 'below=5 of node'
 % {name}{location}
@@ -122,7 +122,8 @@
   \IfSubStr{#2}{=}{
     \coordinate[#2] (#1);
   }{\ifboolexpr{test {\IfSubStr{#2}{$}} % Breaks syntax coloring -_-"
-       or not test {\IfSubStr{#2}{,}}}
+             or test {\IfSubStr{#2}{|}}
+         or not test {\IfSubStr{#2}{,}}}
     {\coordinate (#1) at (#2);}
     {\IntensiveCoordinates{Canvas}{#1}{#2}}
   }
